--- a/templates/ingredient/ingredient.css
+++ b/templates/ingredient/ingredient.css
@@ -348,9 +348,12 @@ html { scroll-behavior: smooth }
         }
 
         img {
+          max-height: 350px;
           width: 100%;
-          height: 100%;
-          object-fit: cover;
+          height: auto;
+          object-fit: contain;
+          display: block;
+          margin: 0 auto;
         }
 
         .vimeo-player {
